--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
-  <body class="w-screen h-screen bg-white dark:bg-gray-900 transition-colors delay-1000">
+  <body class="w-full h-screen bg-white dark:bg-gray-900 transition-colors delay-1000">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
