--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Portfólio</title>
   </head>
-  <body class="w-full h-screen bg-white dark:bg-gray-900 transition-colors delay-1000">
+  <body class="w-full h-screen transition-colors delay-1000 bg-white dark:bg-gray-900 ">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
