--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/lucas.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Site para demonstrar habilidades que possuo no desenvolvimento de software.">
+    <link rel="icon" type="image/svg+xml" href="/lucas.svg" />
     <title>Portfólio</title>
   </head>
   <body class="w-full h-screen transition-colors delay-1000 bg-white dark:bg-gray-900 ">
