--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Site para demonstrar habilidades que possuo no desenvolvimento de software.">
     <link rel="icon" type="image/svg+xml" href="/lucas.svg" />
-    <title>Portfólio</title>
+    <title>Lucas - Portfólio</title>
   </head>
   <body class="w-full h-screen transition-colors delay-1000 bg-white dark:bg-gray-900 ">
     <div id="app"></div>
