feat: add link active in menu and minimize component

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Site para demonstrar habilidades que possuo no desenvolvimento de software.">
+    <meta name="description" content="Explore o portfólio pessoal de Lucas Dantas, revelando paixão e experiência em Laravel, VueJs e MySql. Descubra como minha jornada criativa em Laravel e VueJs tem moldado minha visão única. Conheça meu trabalho e entre em contato para oportunidades colaborativas.">
     <link rel="icon" type="image/svg+xml" href="/lucas.svg" />
     <title>Lucas - Portfólio</title>
   </head>
